tests/evaluator/should_pass/events.csp
channel a
channel b : {0,1,2}

test1 = Events == { a, b.0, b.1, b.2 }
test2 = Events == {| a, b |}
