tests/evaluator/should_fail/outside_event_set.csp
channel toggle : {1}.{1}

test2 = not member(toggle.1.0, Events)
